# nautilus-toolkit

./: .gitignore  CMakeLists.txt  install.sh  uninstall.sh
docs/superpowers/plans/: 2026-07-04-polyglot-zero-copy-zip.md
docs/superpowers/specs/: 2026-07-04-polyglot-zero-copy-zip-design.md
src/: nautilus_ext.c  style.h  toolkit_window.c  toolkit_window.h
src/compress/: CLAUDE.md  compress-backend.c  compress-backend.h  compress-dialog.c  compress-dialog.h  compress-progress.c  compress-progress.h
src/core/: encoding.c  encoding.h  exec7z.c  exec7z.h  extract_outdir.c  extract_outdir.h  extract_util.h  fsutil.c  fsutil.h  log.c  log.h  logic.c  path.c  path.h  polyglot.c  polyglot.h  polyglot_zip_extract.c  polyglot_zip_extract.h  pwdlib.c  pwdlib.h  strbuf.c  strbuf.h
src/ui_gtk/: ui_gtk.h  ui_gtk_extract.c  ui_gtk_progress.c  ui_gtk_window.c
tests/: test_extract_outdir.c  test_legacy_zip.c  test_polyglot.c  test_polyglot_zip_extract.c
